# PAN

./: .dockerignore  .gitignore  .mcp.json  .pan  AI-CYCLOSIS.md  ARCHITECTURE.md  BUSINESS.md  CLAUDE.md  COMPETITIVE.md  DOG-COMMUNICATION.md  FEATURES.md  LICENSE  MANUFACTURING.md  MISSION.md  MODULES.md  PAN.bat  PAN.vbs  PAN_DEBUG.bat  PHYSICS.md  PLATFORM-ISSUES.md  README.md  SENSOR-ARRAY.md  SENSOR-RESEARCH.md  SENSORS.md  STRATEGY.md  USECASES.md  build_apk.js  do_build.bat  install_apk.js  pan-agent.ps1  pan-start.ps1  parse-tasks.js  run_build.js  temp-tasks.json  tmp_api_test.json
android/: .pan  gradlew.bat  settings.gradle.kts
browser-extension/: background.js  manifest.json  popup.html
docs/: AI-MODEL-SELECTION.md  ARCHITECTURE.md  BLE-MESH.md  CEREBRAS-COST-ANALYSIS.md  DATA-DIVIDENDS.md  DESIGN.md  FEATURES.md  HOME-ASSISTANT.md  MEMORY-PIPELINE.md  MODULES.md  MULTI-DEVICE-ROUTING.md  NIGHTMARE_BUGS.md  PAN-CLIENT.md  PAN_SENSOR_ARRAY.docx  PLATFORM-ISSUES.md  SENSOR-RESEARCH.md  SENSOR-SCIENCE.md  SUPER-CARRIER.md  TOOLS.md  TRANSCRIPT_SYSTEM.md  USECASES.md  carrier-plan.md  index.html  productivity-multiplier.tex
hub/: Dockerfile  docker-compose.yml  hub.js  package-lock.json  package.json  test.js
installer/: Dockerfile  INSTALL-REQUIREMENTS.html  docker-compose.yml  install.ps1  install.sh  pan-setup.nsi
pan-client/: package-lock.json  package.json  pan-client.js
service/: .pan  (+23 more)
service/tauri/src-tauri/: Cargo.toml  tauri.conf.json
service/tauri/src-tauri/capabilities/: default.json
service/tauri/src-tauri/src/: lib.rs  main.rs
(+2239 files in other folders)
