[package]
name = "pan-shell"
version = "0.1.0"
description = "PAN Desktop Shell"
authors = ["Tzuridis"]
edition = "2021"

[lib]
name = "pan_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
xcap = "0.0.14"
base64 = "0.22"
tiny_http = "0.12"
image = "0.25"
rdev = "0.5"
ureq = { version = "2", features = ["json"] }
